<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>examples</artifactId>
    <version>3.4-RC4</version>
  </parent>

  <groupId>org.example</groupId>
  <artifactId>example-jdk-jsonb</artifactId>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
  </properties>

  <dependencies>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-config</artifactId>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jex</artifactId>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb</artifactId>
    </dependency>
    
    <!-- Annotation processors -->
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-generator</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb-generator</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-client-generator</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-jex-generator</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.11.4</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>build</goal>
                </goals>
                <phase>package</phase>
              </execution>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>
              <imageName>mytest</imageName>
              <mainClass>org.example.Main</mainClass>
              <buildArgs>
                <!-- needed for jdk.httpserver module -->
                <buildArg>-J--add-modules</buildArg>
                <buildArg>-JALL-SYSTEM</buildArg>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--allow-incomplete-classpath</buildArg>
                <buildArg>-H:ReflectionConfigurationFiles=graalvm-meta/reflection.json</buildArg>
                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger</buildArg>-->
                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger$1</buildArg>-->
                <!--                <buildArg>&#45;&#45;trace-object-instantiation=org.slf4j.simple.SimpleLogger</buildArg>-->
              </buildArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>
